Inventory changed name (logo and username) to Supervisor Studio

--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -364,11 +364,11 @@ License: You must have a valid license purchased only from themeforest(the above
 													<label class="col-4 col-form-label">Tempat Treatment :</label>
 													<div class="col-8">
 														<div class="kt-radio-list">
-															<label class="kt-radio">
+															<label class="kt-radio kt-radio--brand">
 																<input type="radio" name="treatment_place" checked> Studio Treatment
 																<span></span>
 															</label>
-															<label class="kt-radio">
+															<label class="kt-radio kt-radio--brand">
 																<input type="radio" name="treatment_place"> Home Treatment
 																<span></span>
 															</label>
