--- a/user_inventory/request_out.html
+++ b/user_inventory/request_out.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Request Out | Inventory Fabulash</title>
+		<title>Request Out | Supervisor Studio Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -109,7 +109,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper">
 						<div id="kt_aside_menu" class="kt-aside-menu " data-ktmenu-vertical="1" data-ktmenu-scroll="1" data-ktmenu-dropdown-timeout="500">
 							<div class="side-logo-container">
-								<h4 class="sidebar-logo">INVENTORY PAGE</h4>
+								<h4 class="sidebar-logo">SUPERVISOR STUDIO PAGE</h4>
 							</div>
                             <ul class="kt-menu__nav ">
 								<li class="kt-menu__item " aria-haspopup="true"><a href="user_inventory/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
@@ -172,7 +172,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div id="kt_header_menu" class="kt-header-menu kt-header-menu-mobile  kt-header-menu--layout-default ">
                                 <div class="kt-menu__nav ">
 									<div class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel">
-    									<h4 class="kt-menu__link-text" style="margin-bottom:0px; font-weight: 800;">INVENTORY PAGE</h4>
+    									<h4 class="kt-menu__link-text" style="margin-bottom:0px; font-weight: 800;">SUPERVISOR STUDIO PAGE</h4>
 									</div>
 								</div>
 							</div>
@@ -187,7 +187,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-header__topbar-item kt-header__topbar-item--user">
 								<div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="0px,0px">
 									<div class="kt-header__topbar-user">
-										<span id="userName" name="userName" class="kt-header__topbar-username kt-hidden-mobile">Inventory</span>
+										<span id="userName" name="userName" class="kt-header__topbar-username kt-hidden-mobile">Supervisor Studio</span>
 										<img id="userImage" name="userImage" style="margin-left: 5px" alt="Pic" class="kt-radius-100" src="assets/media/users/user5.jpg" data-pagespeed-url-hash="619118654" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 									</div>
 								</div>
