--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -333,7 +333,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <div class="row" style="margin-bottom:20px;">
 												<div class="col-6">
 	                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-	                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
+													<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
 	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 												</div>
