--- a/user_admin/listTreatment_detail_scheduled.html
+++ b/user_admin/listTreatment_detail_scheduled.html
@@ -319,8 +319,27 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="row justify-content-center">
 
 								<div class="col-lg-8 col-xl-6">
+									<div class="kt-portlet kt-portlet--mobile">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<h3 class="kt-portlet__head-title">
+													Treatment Status : <span class="kt-portlet__head-title kt-font-dark">Scheduled</span>
+												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<ul class="nav nav-pills" role="tablist">
+													<li class="nav-item">
+														<a class="nav-link active">
+															SPK
+														</a>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
 
-									<!--begin::Portlet-->
+								<div class="col-lg-8 col-xl-6">
 									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -336,26 +355,26 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
                                                 <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
                                             </div>
-                                            <table class="col-5" style="margin-bottom:50px">
+                                            <table class="col-sm-7 col-md-6" style="margin-bottom:50px">
                                                 <tr>
                                                     <th>Tanggal</th>
                                                     <th>:</th>
                                                     <th style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
-                                                <!-- <tr>
-                                                    <th>Therapist</th>
+                                                <tr>
+                                                    <th>Jadwal</th>
                                                     <th>:</th>
-                                                    <th style="font-weight:500;" name="treatment_therapist">Ka</th>
-                                                </tr> -->
+                                                    <th style="font-weight:500;" name="treatment_jadwal">10.00 WITA</th>
+                                                </tr>
                                             </table>
-        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
+        									<!-- <table class="table table-bordered table-hover table-checkable" id="table_spk_scheduled"></table> -->
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px;">
 													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute">
 		                                                <tr>
 		                                                    <th width="35%">Waktu Mulai</th>
 		                                                    <th width="10%">:</th>
-		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">-</th>
 		                                                </tr>
 		                                                <tr>
 		                                                    <th>Waktu Selesai</th>
@@ -375,8 +394,6 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
 										</div>
 									</div>
-
-									<!--end::Portlet-->
 								</div>
 
 							</div>
