--- a/user_admin/listTreatment_detail_ongoing.html
+++ b/user_admin/listTreatment_detail_ongoing.html
@@ -319,8 +319,27 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="row justify-content-center">
 
 								<div class="col-lg-8 col-xl-6">
+									<div class="kt-portlet kt-portlet--mobile">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<h3 class="kt-portlet__head-title">
+													Treatment Status : <span class="kt-portlet__head-title kt-font-brand">Ongoing</span>
+												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<ul class="nav nav-pills" role="tablist">
+													<li class="nav-item">
+														<a class="nav-link active">
+															SPK
+														</a>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
 
-									<!--begin::Portlet-->
+								<div class="col-lg-8 col-xl-6">
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -337,16 +356,13 @@ License: You must have a valid license purchased only from themeforest(the above
 	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 												</div>
-												<!-- <div class="col-6">
+												<div class="col-6">
 													<div class="row">
-														<div class="col-12" style="text-align: right; margin-bottom:5px;">
-															<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
-														</div>
 														<div class="col-12" style="text-align: right;">
 															<button class="col-5 btn btn-danger no-print" id="kt_sweetalert_void">Void</button>
 														</div>
 													</div>
-												</div> -->
+												</div>
                                             </div>
                                             <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
                                                 <tr>
@@ -354,13 +370,8 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th width="10%">:</th>
                                                     <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
-                                                <!-- <tr>
-                                                    <th>Therapist</th>
-                                                    <th>:</th>
-                                                    <th style="font-weight:500;" name="treatment_therapist">Ka</th>
-                                                </tr> -->
                                             </table>
-        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
+        									<table class="table table-bordered table-hover table-checkable" id="table_spk_ongoing"></table>
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px;">
 													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
@@ -376,28 +387,9 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                </tr>
 		                                            </table>
 												</div>
-												<!-- <div class="col-6" style="padding-right:0px;">
-													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
-		                                                <tr>
-		                                                    <th width="35%">Waktu Mulai</th>
-		                                                    <th width="10%">:</th>
-		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
-		                                                </tr>
-		                                                <tr>
-		                                                    <th>Waktu Selesai</th>
-		                                                    <th>:</th>
-		                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
-		                                                </tr>
-		                                            </table>
-												</div>
-												<div class="col-6" style="padding-left:0px;text-align:right;">
-													<button class="col-5 btn btn-success no-print" style="margin-top:5px;" data-toggle="modal" data-target="#kt_modal_treatment_bayar">Bayar</button>
-												</div> -->
                                             </div>
 										</div>
 									</div>
-
-									<!--end::Portlet-->
 								</div>
 
 							</div>
